@@ -1,6 +1,7 @@
 package com.mysite.sbb.question;
 
 import static org.mockito.Mockito.*;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -13,18 +14,25 @@ import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.Import;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.ResultActions;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 
+import com.mysite.sbb.SecurityConfig;
 import com.mysite.sbb.answer.Answer;
+import com.mysite.sbb.user.UserController;
 
 @WebMvcTest(QuestionController.class)
+@Import(SecurityConfig.class)
+@AutoConfigureMockMvc
 @ActiveProfiles("test")
 public class QuestionControllerTest {
 	@Autowired
@@ -38,15 +46,19 @@ public class QuestionControllerTest {
 	public void connect_QuestionList() throws Exception {
 		// 가짜 Question 객체 생성
 		Question fakeQuestion = new Question();
-		fakeQuestion.setId(1);
 		fakeQuestion.setSubject("Fake Subject");
 		fakeQuestion.setContent("Fake Content");
 		fakeQuestion.setCreateDate(LocalDateTime.now());
 
+		Answer fakeAnswer = new Answer();
+		fakeAnswer.setContent("Fake Con");
+		fakeAnswer.setCreateDate(LocalDateTime.now());
+		fakeAnswer.setQuestion(fakeQuestion);
+
+		fakeQuestion.setAnswerList(new ArrayList<>() {{add(fakeAnswer);}});
+
 		// Mock 데이터 생성
-		List<Question> questionList = Arrays.asList(
-			fakeQuestion,
-			fakeQuestion,
+		List<Question> questionList = List.of(
 			fakeQuestion
 		);
 
@@ -55,9 +67,17 @@ public class QuestionControllerTest {
 		// QuestionService의 동작 설정
 		when(questionService.getList(anyInt())).thenReturn(page);
 
-		mockMvc.perform(get("/question/list"))
-			.andExpect(status().isOk()) // 성공 시 HTTP 200 OK를 반환한다고 가정합니다.
-			.andExpect(view().name("question_list")) // "question_list" 뷰를 반환한다고 가정합니다.
+		ResultActions resultActions = mockMvc
+			.perform(get("/question/list")
+				.param("page", "0")
+				.with(csrf()))
+			.andDo(print());
+
+		resultActions
+			.andExpect(status().is2xxSuccessful())
+			.andExpect(handler().handlerType(QuestionController.class))
+			.andExpect(handler().methodName("list"))
+			.andExpect(view().name("question_list"))
 			.andExpect(model().attributeExists("paging"))
 			.andExpect(model().attribute("paging", page))
 			.andDo(print()); // 디버깅을 위해 요청 및 응답 세부 정보를 출력합니다.
@@ -86,9 +106,10 @@ public class QuestionControllerTest {
 		// QuestionService의 동작 설정
 		when(questionService.getQuestion(1)).thenReturn(fakeQuestion);
 
-		mockMvc.perform(get("/question/detail/1")
-				.accept(MediaType.TEXT_HTML))
-			.andExpect(status().isOk())
+		mockMvc.perform(get("/question/detail/1"))
+			.andExpect(status().is2xxSuccessful())
+			.andExpect(handler().handlerType(QuestionController.class))
+			.andExpect(handler().methodName("detail"))
 			.andExpect(view().name("question_detail"))
 			.andExpect(model().attributeExists("question"))
 			.andExpect(model().attribute("question", fakeQuestion));
@@ -97,9 +118,10 @@ public class QuestionControllerTest {
 	@Test
 	@DisplayName("[/question/create] Create 접속")
 	public void connect_QuestionCreate4xxGet() throws Exception {
-		mockMvc.perform(get("/question/create")
-				.accept(MediaType.TEXT_HTML))
-			.andExpect(status().isOk())
+		mockMvc.perform(get("/question/create"))
+			.andExpect(handler().handlerType(QuestionController.class))
+			.andExpect(handler().methodName("questionCreate"))
+			.andExpect(status().is2xxSuccessful())
 			.andExpect(view().name("question_form"))
 			.andExpect(model().attributeExists("questionForm"));
 	}
@@ -108,7 +130,7 @@ public class QuestionControllerTest {
 	@DisplayName("[/question/create] Create Post 발송 실패")
 	public void connect_QuestionCreatePostFailed() throws Exception {
 		MockHttpServletRequestBuilder requestBuilder = post("/question/create")
-			.contentType(MediaType.APPLICATION_FORM_URLENCODED)
+			.with(csrf())
 			.param("subject", "")  // empty subject to trigger validation error
 			.param("content", "Valid Content");
 
@@ -124,7 +146,7 @@ public class QuestionControllerTest {
 	@DisplayName("[/question/create] Create Post 빈 제목 발송")
 	public void connect_QuestionCreatePostEmptySbj() throws Exception {
 		MockHttpServletRequestBuilder requestBuilder = post("/question/create")
-			.contentType(MediaType.APPLICATION_FORM_URLENCODED)
+			.with(csrf())
 			.param("subject", "")
 			.param("content", "Fake Content");
 
@@ -138,7 +160,7 @@ public class QuestionControllerTest {
 	@DisplayName("[/question/create] Create Post 빈 내용 발송")
 	public void connect_QuestionCreatePostEmptyCon() throws Exception {
 		MockHttpServletRequestBuilder requestBuilder = post("/question/create")
-			.contentType(MediaType.APPLICATION_FORM_URLENCODED)
+			.with(csrf())
 			.param("subject", "Fake Subject")
 			.param("content", "");
 
@@ -152,7 +174,7 @@ public class QuestionControllerTest {
 	@DisplayName("[/question/create] Create Post 발송 성공")
 	public void connect_QuestionCreatePost() throws Exception {
 		MockHttpServletRequestBuilder requestBuilder = post("/question/create")
-			.contentType(MediaType.APPLICATION_FORM_URLENCODED)
+			.with(csrf())
 			.param("subject", "Fake Subject")
 			.param("content", "Fake Content");
 
